[package]
name = "mal-news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
rss = "2.0"
tabled = "0.5.0"
tokio-test = "0.4.2"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]
